--- a/proyecto-Clopix/src/views/Products/ModificarProducto.ejs
+++ b/proyecto-Clopix/src/views/Products/ModificarProducto.ejs
@@ -16,30 +16,32 @@
         <section class="AltaProducto"></section>
 
             <div class="wrapper">
-            <div class="title">
-                PRODUCTO PERSONALIZADO
+                <div class="title">
+                    PRODUCTO PERSONALIZADO
+                </div>
+
+                <div class="form">
+        
+                    <div class="inputfield">
+
+                        <label>Nombre del producto</label>
+                        <input type="text" class="input">
+                        </div> 
+
+                    <div class="inputfield">
+                        
+                        <label>Descripción </label>
+                        <input type="text" class="input">
+                    </div> 
+
+                    <div class="inputfield"> 
+                    
+                        <label> Precio </label>
+                        <input type="text" class="input">
+                    </div>
+                </div>
             </div>
-
-            <div class="form">
-    
-            <div class="inputfield">
-
-                <label>Nombre del producto</label>
-                <input type="text" class="input">
-                </div> 
-
-            <div class="inputfield">
-                
-                <label>Descripción </label>
-                <input type="text" class="input">
-            </div> 
-
-            <div class="inputfield"> 
-            
-                <label> Precio </label>
-                <input type="text" class="input">
-            </div>
-
+               </article>
             <!--BOTONES-->
 
         <div class="inputfield">
