arreglando estilos del catalogo

--- a/proyecto-Clopix/public/css/CarritoStyle.css
+++ b/proyecto-Clopix/public/css/CarritoStyle.css
@@ -137,6 +137,7 @@ footer {
     border: 1px solid white;
     align-content: center;
     justify-content: center;
+    align-items: flex-end;
 }
 footer a img{
     width: 8%;
