--- a/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
+++ b/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
@@ -44,7 +44,11 @@
                         </td>
         
                         <td class="NoProducto">
-                            <button type="delete"><i class="far fa-trash-alt"></i></button>
+                            <form method="POST" action= "/Producto/Carrito/<%= DetalleCompra[i].id %>?_method=delete" > 
+
+                                <button type="submit"> <i class="far fa-trash-alt"></i> </button> 
+                            </form>
+
                         </td>
                     </tr>
                
