--- a/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
+++ b/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
@@ -44,11 +44,10 @@
                         </td>
         
                         <td class="NoProducto">
-                            <form method="POST" action= "/Producto/Carrito/<%= DetalleCompra[i].id %>?_method=delete" > 
+                            <form method="post" action= "/Producto/Carrito/<%= DetalleCompra[i].id %>/eliminar?_method=delete" > 
 
                                 <button type="submit"> <i class="far fa-trash-alt"></i> </button> 
                             </form>
-
                         </td>
                     </tr>
                
