--- a/proyecto-Clopix/public/css/unProducto.css
+++ b/proyecto-Clopix/public/css/unProducto.css
@@ -98,14 +98,17 @@ footer a img{
     margin-bottom: 20px;
     
     
+    
 }
 .etiquetasPie{
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
+    padding: 20px;
 }
 
 section.infoContacto{
+    padding: 20px;
     align-items: flex-end;
 }
 
@@ -116,18 +119,34 @@ article section {
     display: flex;
     margin-top:35px;
     margin-bottom: 0px;
-    border: 1px solid white;
+    border: 1px solid rgb(245, 207, 222);
     align-content: center;
     justify-content: center;
     flex-direction: column;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    text-shadow: 1px 1px 6px #fff;
+    padding: 10px;
+    
+    
+    
 }
 
-article section .far-fa-plus-square {
-   
-}
 
 
 button {
+    
     width: 100%;
-    color: black;
+    font-size: 15px;
+    color: white;
+    background: rgb(204,47,223);
+    background: linear-gradient(0deg, rgba(204,47,223,1) 34%, rgba(159,34,195,1) 100%);
+    border: 2px solid rgb(159,34,195);;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    text-shadow: 1px 1px 6px #fff;
+
 }
+
