ajuste muchas cosas del las rutas

--- a/proyecto-Clopix/src/views/Products/ModificarProducto.ejs
+++ b/proyecto-Clopix/src/views/Products/ModificarProducto.ejs
@@ -25,19 +25,22 @@
                     <div class="inputfield">
 
                         <label>Nombre del producto</label>
-                        <input type="text" class="input">
+                        <label >Actual: <%= producto.nombre%> </label>
+                        <input type="text" class="input" name="newNombre">
                         </div> 
 
                     <div class="inputfield">
                         
                         <label>Descripción </label>
-                        <input type="text" class="input">
+                        <label >Actual: <%= producto.descripcion %> </label>
+                        <input type="text" class="input" name="newDescripcion">
                     </div> 
 
                     <div class="inputfield"> 
                     
                         <label> Precio </label>
-                        <input type="text" class="input">
+                        <label >Actual: <%= producto.precio %> </label>
+                        <input type="text" class="input" name="newPrecio">
                     </div>
                 </div>
             </div>
