--- a/proyecto-Clopix/public/css/AltaProducto.css
+++ b/proyecto-Clopix/public/css/AltaProducto.css
@@ -58,8 +58,10 @@ form{
     justify-items: center;
     margin: 0px;
     padding: 5px;
-    font-size:x-large
+    font-size:x-large;
+   
 }
+
 #AltaProducto {
     
     width: 100%;
@@ -70,7 +72,16 @@ form{
     margin: 20px;
     padding: 10px;
 }
+input{
+    color: black;
+}
 button{
+    color: black;
+}
+select{
+    color: black;
+}
+option{
     color: black;
 }
 
