--- a/proyecto-Clopix/src/views/Users/register.ejs
+++ b/proyecto-Clopix/src/views/Users/register.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width-device-width">
 
-        <link rel="stylesheet" href="/css/register.css">
+        <link rel="stylesheet" href="/css/Register.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet">
 
