reduje muchos styloss

--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -8,7 +8,7 @@
     rel="stylesheet">
 
     </head>
-    <body>
+    <body id="bodyHome">
         <%- include('./partials/header')%>
         <section><!-- prueba del slider-->
 
