--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -1,134 +1,212 @@
-
-/* Editar producto */
-
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    box-sizing:  border-box;
+    padding: 0px;
+    margin: 0px;
 }
-
-body{
-    width: 100%;
-    background-image: url("https://cdn.shopify.com/s/files/1/1171/8456/files/71530421_729406894232388_5302369846022799223_n_1024x1024.jpg?v=1636497317");
-    background-size: cover;
-}
-
 img{
     width: 100%;
-    height: 100%;
 }
-
+/*header*/
 header{
     background-color: white;
-    border: 5px solid #f0cddc;
 }
-
+header img{
+    width: 100%;
+}
 header nav ul li a{
     width: 15%;
     color: #99DDCC;
-    font-size: 30px;
     margin: 10px;
+   
 }
-
 header nav ul li{
     display: flex;
     width: 25%;
-    align-items: center;
+    align-content: center;
     justify-content:space-between;
 }
-
 header nav ul{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;/*esto hace el salto de linea*/
 }
-
-.fas-fa {
-    display: flex;
-    flex-wrap: wrap; 
-    position: absolute;
-    right: 15px;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 15px;
-}
-
-.fas-fa .fas-fa-home{
-    color: white;
-    background-color: black;
-}
-section.op{
-    display: flex;
-    margin: auto;
-    justify-content: center;
-}
-
-/* FIN DEL HEADER*/
-
-footer a img{
-    width: 8%;
-}
-
-#footer { 
-    position:relative;
-    height: 10vh;
-    margin-bottom: 20px;
-}
-
-
-nav .menu{ 
-    width: 100%;
-    position: absolute;
-    top: auto;
-    right: 0;
-    bottom: 1px;
-    left: 0;
-    background: #f1f2f3;
-}
-
-html{    
-    height: 100%;
-}
-
-ul, li {
-    padding: 0px;
-    margin: 0;
-    list-style: none inside;
-}
-
-/*BOTONES DE DIAPOSITIVA*/ 
-
-nav ul {
-    display: flex;
-    justify-content: space-around;
+/*correccion del header, copie lo de rocio y quite el codigo que no hace nada*/
+nav ul li {
+    flex-grow: 1;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
-
-nav a{
-    font-size: calc( 1.2rem + 1vw );
+nav a {
     text-decoration: none;
     font-weight: bold;
-    color: #00324b;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.8;
     flex-grow: 1;
     text-align: center;
     border-top: 5px solid #00324b;
-    border-right: 1px solid #00324b;
     flex-wrap: wrap;
     position: relative;
 }
 
-/*Comienza edición de producto */ 
 
-.wrapper { 
-    max-width: 500px;
+/*header*/
+body#bodyCarritoCompras{
+    width: 100%;
+    background-image: url("https://cutewallpaper.org/21/vaporwave-pixel-art-wallpaper/19-Pixel-Art-Wallpapers-that-Will-Make-Your-Desktop-Retro.png"); 
+    padding: 40px;
+    margin: auto;
+    color: white;
+}
+/*ajustes del carrito*/
+#bodyCarritoCompras table{
+    width: 100%;
+}
+#bodyCarritoCompras tr{
+    width: 100%;
+    text-align: center;
+}
+#bodyCarritoCompras thead{
+    height: 4vh;
+    font-size: medium;
+    font-family: cursive;
+}
+#bodyCarritoCompras tbody{
+    height: 50vh;
+}
+#bodyCarritoCompras tbody.resultados{
+    height: 5vh;
+}
+
+#bodyCarritoCompras tr td.dproducto{
+    
+    height: auto;
+    background-color: #99DDCC;
+    justify-content: center;
+    align-items: center;
+    width: 22%;
+    color: black;
+}
+#bodyCarritoCompras tr td.producto img{
+    justify-content: center;
+    align-items: center;
+}
+#bodyCarritoCompras td.imagenProducto{
+    width: 40%;
+}
+
+#bodyCarritoCompras button{
+
+    background-color: #99DDCC;
+    width: 100%;
+    color: #FF5DA2;
+    /*border: solid #FF5DA2 5px;*/
+    justify-content: space-around;
+}
+#bodyCarritoCompras td button{
+    width: 40%;
+}
+#bodyCarritoCompras td.NoProducto{
+    border: none;
+    color: white;
+}
+#bodyCarritoCompras td.NoProducto button{
+    width: 100%;
+    height: 10vw;
+    background:none;
+    border: none;
+    font-size: 50px
+}
+#bodyCarritoCompras td.dproducto label{
+    font-size: 25px;
+}
+#bodyCarritoCompras tr td{
+    border: 1px solid white;
+}
+
+#bodyCarritoCompras tr.resultados td{
+    border: none;
+}
+#bodyCarritoCompras tr.resultados td.resultados{
+    border: 1px solid white;
+    background-color: #FF5DA2;
+}
+#bodyCarritoCompras .special{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    flex-direction: row;
+    height: 4vh;
+}
+#bodyCarritoCompras td.imagenProducto img{
+    width: 100%;
+}
+
+/*fin stylos carrito*/
+/*estilos unproducto*/
+#bodyUnProducto article section {
+    display: flex;
+    margin-top:35px;
+    margin-bottom: 0px;
+    border: 1px solid rgb(245, 207, 222);
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    text-shadow: 1px 1px 6px #fff;
+    padding: 10px;
+    
+    
+    
+}
+body#bodyUnProducto{
+    width: 100%;
+    background-image: url("https://cutewallpaper.org/21/vaporwave-pixel-art-wallpaper/19-Pixel-Art-Wallpapers-that-Will-Make-Your-Desktop-Retro.png"); 
+    padding: 40px;
+    margin: auto;
+}
+
+
+#bodyUnProducto button {
+    
+    width: 100%;
+    font-size: 15px;
+    color: white;
+    background: rgb(204,47,223);
+    background: linear-gradient(0deg, rgba(204,47,223,1) 34%, rgba(159,34,195,1) 100%);
+    border: 2px solid rgb(159,34,195);;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    text-shadow: 1px 1px 6px #fff;
+
+}
+/*fin estilos unProducto*/
+
+/*inicio estilos ModificarProducto*/
+body#bodyModificarProducto{
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    background-image: url("https://cdn.shopify.com/s/files/1/1171/8456/files/71530421_729406894232388_5302369846022799223_n_1024x1024.jpg?v=1636497317");
+    background-size: cover;
+
+}
+#bodyModificarProducto form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+#bodyModificarProducto .wrapper {
+    margin-top: 20px;
     background: #fff;
     padding: 30px;
     margin: auto;
 }
 
-.wrapper .title{ 
+#bodyModificarProducto .wrapper .title{ 
     font-size: 24px;
     font-weight: 700;
     color: plum;
@@ -136,20 +214,17 @@ nav a{
     margin-bottom: 25px;
 }
 
-.wapper.form { 
+#bodyModificarProducto form { 
     width: 100%;
+    background-color: white;
 }
 
-.wrapper .form .inputfield { 
-    margin-bottom: 15px;  
-}
-
-.wrapper .form .inputfield label { 
+#bodyModificarProducto .wrapper .form .inputfield label { 
 color: #757575;
 font-size: 14px;
 }
 
-.wrapper .form .inputfield .input { 
+#bodyModificarProducto .wrapper .form .inputfield .input { 
     width: 100%;
     border: 1px solid #d5d5d5;
     font-size: 15px;
@@ -157,23 +232,97 @@ font-size: 14px;
     border-radius: 3px;
     margin-top: 20px;
 }
-
-.wrapper .form .inputfield .btn{
-    padding: 8px 10px;
-    font-size: 15px; 
-    border: 0px;
-    background:  plum;
-    color: #fff;
-    cursor: pointer;
-    border-radius: 3px;
-    width: 35%;
-    margin: 0px 0px 10px;
+#bodyModificarProducto form{
+    width: 100%;
+}
+#bodyModificarProducto form button{
+    width: 100%;
+    border: 2px solid #99DDCC;
+    background-color: white;
+}
+/*fin de estilos modificar producto*/
+/*estilos catalogo*/
+body#bodyCatalogo{
+    width: 100%;
+    background-image: url("https://cutewallpaper.org/21/vaporwave-pixel-art-wallpaper/19-Pixel-Art-Wallpapers-that-Will-Make-Your-Desktop-Retro.png"); 
+    padding: 40px;
+    margin: auto;
+}
+#bodyCatalogo section article{
+    display: flex;
+    width: 45%;
+    flex-direction: column;
+    height: auto;
+    margin: 2%;
+    
 }
 
-.wrapper .form .inputfield .btn:hover{
-    background: black;
+#bodyCatalogo section.imagenProducto{
+    height: 600px;
+
+}
+#bodyCatalogo section.datos{
+    background-color: #99DDCC;
+    
+}
+#bodyCatalogo section.datos label.Nombre{
+    font-size: 30px;
+    color: black;
+}
+#bodyCatalogo section.datos label.Precio{
+    font-size: 20px;
+    color: black;
+}
+#bodyCatalogo section article section{/*apartado Img y Descripcion*/
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border: 1px solid #99DDCC;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
 }
 
+#bodyCatalogo section.Productos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+/*fin estilos catalogo*/
+
+/*footer*/
+section.infoContacto{
+    align-items: flex-end;
+}
+img.redesSociales{
+    align-items: flex-end;
+}
+.etiquetasPie{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+}
+footer a img{
+    width: 8%;
+}
+footer a{
+    color: white;
+}
+footer { 
+    /*height: 10vh;*/
+    /*bottom: 40px;*/
+    height: auto;
+    margin-top:35px;
+    margin-bottom: 0px;
+    border: 1px solid white;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-end;
+    color: white;
+}
+/*footer*/
 
 @media (min-width:1280px){
 
@@ -182,9 +331,11 @@ font-size: 14px;
 
 }
 @media (max-width:768px){
+    
 
 }
 
 @media (max-width:480px){
+  
 
 }
