--- a/proyecto-Clopix/src/views/Products/unProducto.ejs
+++ b/proyecto-Clopix/src/views/Products/unProducto.ejs
@@ -1,13 +1,8 @@
-<head>
-    <meta name="viewport" content="width-device-width">
-
-    <link rel="stylesheet" href="/css/unProducto.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-rel="stylesheet">
-
-</head>
-<body>
-    <%- include("../partials/header") %> 
+<!DOCTYPE html>
+<html>
+    <%- include('../partials/head')  %> 
+    <body id="bodyUnProducto">
+        <%- include("../partials/header") %> 
     
     <article>
         <form action="/Producto/<%= unP.id %>/agregarCarrito" method="post">
