--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -290,6 +290,473 @@ body#bodyCatalogo{
     justify-content: space-between;
 }
 /*fin estilos catalogo*/
+/*Home*/
+body#bodyHome{
+    width: 100%;
+    background: rgb(241,104,193);
+    background: linear-gradient(207deg, rgba(241,104,193,1) 0%, rgba(189,94,213,1) 62%);
+  }
+/*CSS del slider*/
+
+#bodyHome ul, li {
+    padding: 0;
+    margin: 0;
+    list-style: none inside;
+  }
+  
+  #bodyHome ul.slider {
+    position:relative; /*Necesitamos que el ul sea relativo*/
+  }
+  #bodyHome ul.slider li {
+    opacity: 0; /*Ocultamos todos los <li>*/
+    transition: opacity .5s;
+    position: absolute; /*Posicionamos en absoluto los <li>*/
+    left: 0px;
+    top: 0px;
+    margin:50px;
+    padding:50px;
+    border:2px solid red;
+    background:#fff;
+  }
+  #bodyHome ul.slider li:first-child {
+    opacity: 1; /*Mostramos el primer <li>*/
+  }
+  #bodyHome ul.slider li:target {
+    opacity: 1; /*Mostramos el <li> al que apunta el enlace*/
+  }
+  #bodyHome nav .slide-num{
+    position:relative;
+    margin-top:35%;
+    
+  }
+  
+  
+  
+  
+  #bodyHome ul.slider {
+    padding: 30px;
+  }
+  
+  #bodyHome ul.slider li {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: rgb(0, 0, 0);
+    opacity: 0; 
+    transition: opacity .5s;
+    text-align: center;
+  }
+  
+  
+  /*aca se modifican los botones de diapositiva*/
+  #bodyHome nav .menu{ 
+    width: 100%;
+    position: absolute;
+    top: auto;
+    right: 0;
+    bottom: 1px;
+    left: 0;
+    background: #f1f2f3;
+    /**/
+  }
+  
+  #bodyHome nav ul {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  
+  #bodyHome nav ul li {
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+  }
+  
+  #bodyHome nav a{
+    font-size: calc( 1.2rem + 1vw );
+    text-decoration: none;
+    font-weight: bold;
+    color: #00324b;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.8;
+    flex-grow: 1;
+    text-align: center;
+    border-top: 5px solid #00324b;
+    border-right: 1px solid #00324b;
+    flex-wrap: wrap;
+    position: relative;
+  }
+  
+  #bodyHome nav li:last-child a {
+    border-right: 0;
+  }
+  
+  #bodyHome nav a:hover {
+    background-color: #3ccabe;
+    color: #fff;
+    border-top-color: #65bce8;
+  }
+  
+  #bodyHome nav a:active {
+    border-top-color: rgb(106, 219, 195);
+    background: rgb(187, 22, 146);
+    color: #23d6be;
+  }
+  
+  
+  /*fin CSS del slider*/
+  
+  /*MAIN*/
+  
+  
+  #bodyHome main{
+    margin: auto;
+    width: 90%;
+    
+  }
+  #bodyHome main article{
+    margin: auto;
+    margin-top:15px;
+    width: 100%;
+    
+  }
+  #bodyHome main article img{
+    width: 100%;
+  }
+  
+  #bodyHome .caja-detalle{
+    border: 3px black solid;
+    padding: 15px;
+    background: rgb(241,104,193);
+    background: linear-gradient(207deg, rgba(241,104,193,1) 0%, rgba(242,223,231,1) 1%); 
+  
+  }
+  #bodyHome main section article .caja-detalle{
+    position: relative;
+  }
+  #bodyHome .caja-detalle i{
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    color: #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: absolute;
+    right: 20px;
+    top: -15px;
+    transition: all 0.3s;
+   
+  
+  }
+  
+  #bodyHome .caja-detalle i:hover{
+    transform: rotate(-90deg)
+  }
+  
+  #bodyHome main section article h3{
+    text-align: left;
+  }
+  
+  #bodyHome main section article{
+  
+     width: 43%;
+  }
+  
+  #bodyHome .caja-detalle p {
+    color: black;
+  }
+/*fin del home*/
+/*estilos login*/
+body#bodyLogin{
+    background-image: url("https://cdn.shopify.com/s/files/1/1110/3486/files/a2495535377_10.jpg?11163386226905960286");
+    background-size: cover;
+    padding: 0 10px;
+  }
+  
+  
+  
+  #bodyLogin .wrapper{
+    max-width: 500px;
+    width: 100%;
+    background: #fff;
+    margin: 20px auto;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
+    padding: 30px;
+    margin-top: 20%;
+  }
+  
+  #bodyLogin .wrapper .title{
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    color: plum;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  
+  #bodyLogin .wrapper .form{
+    width: 100%;
+  }
+  
+  #bodyLogin .wrapper .form .inputfield{
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+  }
+  
+    
+  #bodyLogin .wrapper .form .inputfield label{
+       width: 200px;
+       color: #757575;
+       margin-right: 10px;
+      font-size: 14px;
+    }
+    #bodyLogin .wrapper .form .inputfield .input,
+    #bodyLogin .wrapper .form .inputfield .textarea{
+    width: 100%;
+    outline: none;
+    border: 1px solid #d5dbd9;
+    font-size: 15px;
+    padding: 8px 10px;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+  }
+  
+  #bodyLogin .wrapper .form .inputfield .btn{
+      width: 100%;
+       padding: 8px 10px;
+      font-size: 15px; 
+      border: 0px;
+      background:  plum;
+      color: #fff;
+      cursor: pointer;
+      border-radius: 3px;
+      outline: none;
+    }
+    
+    #bodyLogin  .wrapper .form .inputfield .btn:hover{
+      background: black;
+    }
+/*fin estilos login*/
+/*register*/
+body#bodyRegister{
+  width: 100%;
+  background-image: url("https://cdn.shopify.com/s/files/1/1171/8456/files/71530421_729406894232388_5302369846022799223_n_1024x1024.jpg?v=1636497317");
+  background-size: cover;
+  
+}
+#bodyRegister nav .menu{ 
+  width: 100%;
+  position: absolute;
+  top: auto;
+  right: 0;
+  bottom: 1px;
+  left: 0;
+  background: #f1f2f3;
+  /**/
+}
+
+#bodyRegister nav ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+#bodyRegister nav ul li {
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+
+#bodyRegister nav a{
+  font-size: calc( 1.2rem + 1vw );
+  text-decoration: none;
+  font-weight: bold;
+  color: #00324b;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.8;
+  flex-grow: 1;
+  text-align: center;
+  border-top: 5px solid #00324b;
+  border-right: 1px solid #00324b;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+#bodyRegister nav li:last-child a {
+  border-right: 0;
+}
+
+
+
+
+
+/*FORMULARIO*/
+
+
+#bodyRegister .wrapper{
+  max-width: 500px;
+  width: 100%;
+  background: #fff;
+  margin: 20px auto;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
+  padding: 30px;
+}
+
+#bodyRegister .wrapper .title{
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  color: plum;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+#bodyRegister  .wrapper .form{
+  width: 100%;
+}
+
+#bodyRegister .wrapper .form .inputfield{
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
+#bodyRegister .wrapper .form .inputfield label{
+   width: 200px;
+   color: #757575;
+   margin-right: 10px;
+  font-size: 14px;
+}
+
+#bodyRegister .wrapper .form .inputfield .input,
+#bodyRegister .wrapper .form .inputfield .textarea{
+  width: 100%;
+  outline: none;
+  border: 1px solid #d5dbd9;
+  font-size: 15px;
+  padding: 8px 10px;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+#bodyRegister .wrapper .form .inputfield .textarea{
+  width: 100%;
+  height: 125px;
+  resize: none;
+}
+
+#bodyRegister .wrapper .form .inputfield .custom_select{
+  position: relative;
+  width: 100%;
+  height: 37px;
+}
+
+#bodyRegister .wrapper .form .inputfield .custom_select:before{
+  content: "";
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  border: 8px solid;
+  border-color: #d5dbd9 transparent transparent transparent;
+  pointer-events: none;
+}
+
+#bodyRegister .wrapper .form .inputfield .custom_select select{
+  -webkit-appearance: none;
+  -moz-appearance:   none;
+  appearance:        none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  border: 0px;
+  padding: 8px 10px;
+  font-size: 15px;
+  border: 1px solid #d5dbd9;
+  border-radius: 3px;
+}
+
+
+#bodyRegister .wrapper .form .inputfield .input:focus,
+#bodyRegister .wrapper .form .inputfield .textarea:focus,
+#bodyRegister .wrapper .form .inputfield .custom_select select:focus{
+  border: 1px solid plum;
+}
+
+#bodyRegister .wrapper .form .inputfield p{
+   font-size: 14px;
+   color: #757575;
+}
+#bodyRegister .wrapper .form .inputfield .check{
+  width: 15px;
+  height: 15px;
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+#bodyRegister .wrapper .form .inputfield .check input[type="checkbox"]{
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+#bodyRegister .wrapper .form .inputfield .check .checkmark{
+  width: 15px;
+  height: 15px;
+  border: 1px solid plum;
+  display: block;
+  position: relative;
+}
+#bodyRegister .wrapper .form .inputfield .check .checkmark:before{
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 2px;
+  width: 5px;
+  height: 2px;
+  border: 2px solid;
+  border-color: transparent transparent #fff #fff;
+  transform: rotate(-45deg);
+  display: none;
+}
+#bodyRegister .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark{
+  background:plum;
+}
+
+#bodyRegister .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark:before{
+  display: block;
+}
+
+#bodyRegister button{
+  width: 100%;
+  padding: 8px 10px;
+  font-size: 15px; 
+  border: 0px;
+  background:  plum;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 3px;
+  outline: none;
+}
+
+#bodyRegister .wrapper .form .inputfield .btn:hover{
+  background: black;
+}
+
+#bodyRegister .wrapper .form .inputfield:last-child{
+  margin-bottom: 0;
+}
+#bodyRegister .inputfield .input {
+  margin-top: 20px;
+  align-content: center;
+}
+/*fin register*/
 
 /*footer*/
 section.infoContacto{
@@ -336,6 +803,15 @@ footer {
 }
 
 @media (max-width:480px){
-  
+  #bodyRegister .wrapper .form .inputfield{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #bodyRegister .wrapper .form .inputfield label{
+    margin-bottom: 5px;
+  }
+  #bodyRegister .wrapper .form .inputfield.terms{
+    flex-direction: row;
+  }
 
 }
