--- a/proyecto-Clopix/src/views/Users/perfil.ejs
+++ b/proyecto-Clopix/src/views/Users/perfil.ejs
@@ -28,7 +28,12 @@
             <input type="text" name="nombre de usuario">
 
             <label for="">Cambiar foto del perfil</label>
-            <input type="file" name="imagenPerfil">
+
+            <img src="/images/avatar/imagendeperfil.png" alt="imagendeperfil" class="imagen-perfil">
+            
+
+            <input type="file" class="seleccionar-archivo">
+            
 
             <button type="submit">Cambiar contraseña</button>
 
