ultimos cambios en perfil

--- a/proyecto-Clopix/src/views/Users/perfil.ejs
+++ b/proyecto-Clopix/src/views/Users/perfil.ejs
@@ -18,7 +18,11 @@
         <form action="user/<%= usuario.usuario %>/editPerfil" method="post" enctype="multipart/form-data"> </form>
 
             <label for="">Nombre de usuario: <%= usuario.usuario %> </label>
+
+            <div class ="imagen-avatar-perfil"> 
             <img src="/images/avatar/<%= usuario.avatar  %>"  alt="imagendeperfil" class="imagen-perfil" style="width: 100%;">
+            </div>
+
             <label for="">Nombre Completo: <%= usuario.nombreCompleto %> </label>
             
             <label for="">Mail: <%= usuario.mail %> </label>
