--- a/proyecto-Clopix/public/css/perfil.css
+++ b/proyecto-Clopix/public/css/perfil.css
@@ -53,6 +53,8 @@ form{
     position:relative;
     height: 10vh;
     margin-bottom: 20px;
+    width: 100px;
+    height: auto;
 }
 footer a img{
     width: 8%;  
@@ -98,8 +100,10 @@ nav a {
 label { 
     color: #757575;
     margin-right: 10px;
+    margin-bottom: 15px;
     font-size: 14px;
     width: 200px;
+    display: flex;
     
 }
 
@@ -148,11 +152,14 @@ section.infoContacto {
 }*/
 
 .imagen-perfil {
-        border: 2px solid;
-        margin: 10px;
+        border: 5px solid;
         border-radius: 50%;
         border-color: turquoise;
-        max-width: 10%;
-        padding: 50px;
-        background-image: url('imagendeperfil.png');
+        margin-top: 10px;    
+        margin-bottom: 10px;
+        margin-left: 100px;
+}
+
+.imagen-avatar-perfil { 
+        width: 200px;
 }
