--- a/proyecto-Clopix/src/views/Users/perfil.ejs
+++ b/proyecto-Clopix/src/views/Users/perfil.ejs
@@ -27,8 +27,9 @@
             
             <label for="">Mail: <%= usuario.mail %> </label>
             <label for="">Celular: 054 11-<%= usuario.celular %>  </label>
-            
-            
+            <br>
+            <label for="">nueva contraseña:</label>
+            <input type="password" name="newpassword">
             <button type="submit">Cambiar Contraseña</button>
 
         </form>
