acualizando antes del heroku

--- a/proyecto-Clopix/src/views/Products/unProducto.ejs
+++ b/proyecto-Clopix/src/views/Products/unProducto.ejs
@@ -16,7 +16,7 @@
                 <br>
                 <label for="Descripcion"> <%= unP.description %> </label>
                 <br>
-                <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades"><%= unP.unidades %> </label><button><i class="far fa-minus-square"></i></button> </div>
+                <div> Unidades Disponibles:  <button><i class="far fa-plus-square"></i></button><label for="unidades"><%= unP.stock %> </label><button><i class="far fa-minus-square"></i></button> </div>
                 <br>
                 <label> Talle: <%= unP.talles.name_size %>  </label>
                 <br>
