--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -427,11 +427,14 @@ body#bodyHome{
   }
   
   #bodyHome .caja-detalle{
-    border: 3px black solid;
+    border: 3px white solid;
     padding: 15px;
     background: rgb(241,104,193);
     background: linear-gradient(207deg, rgba(241,104,193,1) 0%, rgba(242,223,231,1) 1%); 
-  
+    Font-family: Garamond;
+    
+    
+    
   }
   #bodyHome main section article .caja-detalle{
     position: relative;
