--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -879,6 +879,24 @@ font-size: 16px;
 
 /*ERROR 404*/
 
+/*MENU ADMIN*/
+body#MenuAdmin{
+  background-color: #FF5DA2;
+}
+body#MenuAdmin div{
+  height: 59vh;
+}
+body#MenuAdmin div ul{
+  width: 100%;
+  justify-content: center;
+  align-content: center;
+}
+
+body#MenuAdmin div ul li{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
 @media (min-width:1280px){
 
 }
