--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -24,7 +24,7 @@
 
         <div class="inputfield">
         <a href="">
-            <button type="submit">Logear</button>
+            <button type="submit">Inicia Sesión</button>
         </a>
         </div>
     </form>
