--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -474,6 +474,8 @@ body#bodyHome{
     color: black;
   }
 /*fin del home*/
+
+
 /*estilos login*/
 body#bodyLogin{
     background-image: url("https://cdn.shopify.com/s/files/1/1110/3486/files/a2495535377_10.jpg?11163386226905960286");
@@ -491,7 +493,19 @@ body#bodyLogin{
     box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
     padding: 30px;
     margin-top: 20%;
+    
   }
+
+  #bodyLogin .wrapper .inputfield {
+    padding: 7px;
+    background-color: antiquewhite;
+    -webkit-text-stroke: 1px rgb(85, 81, 81);
+    font-size: 20px;
+    display: flex;
+    margin: 5px;
+    
+  }
+ 
   
   #bodyLogin .wrapper .title{
     font-size: 24px;
@@ -504,13 +518,19 @@ body#bodyLogin{
   
   #bodyLogin .wrapper .form{
     width: 100%;
+    
   }
-  
+
+  /* en revision 
   #bodyLogin .wrapper .form .inputfield{
+  
     margin-bottom: 15px;
     display: flex;
     align-items: center;
+
   }
+*/
+
   
     
   #bodyLogin .wrapper .form .inputfield label{
@@ -518,17 +538,23 @@ body#bodyLogin{
        color: #757575;
        margin-right: 10px;
       font-size: 14px;
+    
     }
+
+    /* EN REVISIÓN:
     #bodyLogin .wrapper .form .inputfield .input,
     #bodyLogin .wrapper .form .inputfield .textarea{
-    width: 100%;
-    outline: none;
-    border: 1px solid #d5dbd9;
-    font-size: 15px;
-    padding: 8px 10px;
-    border-radius: 3px;
-    transition: all 0.3s ease;
+      width: 100%;
+      outline: none;
+      border: 1px solid #d5dbd9;
+      font-size: 15px;
+      padding: 8px 10px;
+      border-radius: 3px;
+      transition: all 0.3s ease;
   }
+*/
+
+
   
   #bodyLogin .wrapper .form .inputfield .btn{
       width: 100%;
