arreglado stylos carrito detalle y perfil

--- a/proyecto-Clopix/src/views/Products/AltaProducto.ejs
+++ b/proyecto-Clopix/src/views/Products/AltaProducto.ejs
@@ -21,7 +21,7 @@
                     <option value="XXXL">XXXL</option> 
          </select>
          <label for="">Stock inicial</label>
-         <input type="text" name="unidades">
+         <input type="text" name="stock">
         <label for="">Selecionar Imagen</label>
         <input type="file" class= "imagenProducto" name="imagenProducto">
         <button type="submit">Agregar Producto</button>
