subo algunas validaciones del front

--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -886,6 +886,7 @@ footer {
     justify-content: center;
     align-items: flex-end;
     color: white;
+    /*AGREGADO Y FUNCIONAL PERO HAY QUE ARREGLAR*/
     position: fixed;
     bottom: 0px;
 }
