--- a/proyecto-Clopix/src/views/partials/footer.ejs
+++ b/proyecto-Clopix/src/views/partials/footer.ejs
@@ -11,4 +11,5 @@
         <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
     </section>
 
+    <script src="/scripts/register.js"> </script>
 </footer>
