--- a/proyecto-Clopix/src/views/Users/register.ejs
+++ b/proyecto-Clopix/src/views/Users/register.ejs
@@ -77,7 +77,7 @@
                     <input type="checkbox" name="terminosyCondiciones" required>
                     <span class="checkmark"></span>
                   </label>
-                  <p>Acepto términos y condiciones</p>
+                  <h1>Acepto términos y condiciones</h1>
                </div>
               
               <div class="inputfield">
