--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -9,7 +9,7 @@
                 Inicio de sesión 
             </div>
 
-            <form action="/user/loading" method="post">
+            <form name= "loginForm" id=""loginForm action="/user/loading" method="post" class="form">  
                 <p>Usuario</p>
                 <input type="text" class="input" name="user">
                 <p>Contraseña</p>
