--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -10,6 +10,7 @@
             </div>
 
             <form name= "loginForm" id="loginForm" action="/user/loading" method="post" class="form">  
+                <div class="inputfield"></div>
                 <p>Usuario</p>
                 <input type="text" class="input" name="user">
                 <p>Contraseña</p>
