--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -19,6 +19,8 @@
                   <% } %>
                 </div>
 
+
+            <div class="inputfield">
                 <p>Contraseña</p>
                 <input type="password" class="input" name="password">
                 <button type="submit">Inicia Sesión</button>
